--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,23 +37,25 @@ dependencies {
 
     compile files('libs/amazon-ads-5.6.20.jar')
 
-
-
-
-
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.android.support:design:24.1.0'
+    compile 'com.android.support:support-v4:24.1.0'
+
     compile 'de.hdodenhof:circleimageview:2.1.0'
+
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.google.firebase:firebase-ads:9.0.2'
     compile 'com.google.firebase:firebase-analytics:9.0.2'
-    compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
+    compile 'com.google.firebase:firebase-core:9.0.2'
+
     compile 'com.google.android.gms:play-services-auth:9.0.2'
+
     compile 'com.amazonaws:aws-android-sdk-core:2.2.18'
     compile 'com.amazonaws:aws-android-sdk-cognito:2.2.18'
     compile 'com.amazonaws:aws-android-sdk-ddb:2.2.18'
     compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.2.18'
-    compile 'com.android.support:support-v4:24.1.0'
 }
 
 
