--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
     compile files('libs/amazon-ads-5.6.20.jar')
 
+    compile 'com.android.volley:volley:1.0.0'
+
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.android.support:design:24.1.0'
     compile 'com.android.support:support-v4:24.1.0'
