--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.twismart.thechat"
         minSdkVersion 11
         targetSdkVersion 24
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         multiDexEnabled = true
     }
@@ -46,6 +46,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.google.firebase:firebase-ads:9.0.2'
     compile 'com.google.firebase:firebase-analytics:9.0.2'
